--- a/OREAnalytics/OREAnalytics.vcxproj
+++ b/OREAnalytics/OREAnalytics.vcxproj
@@ -44,6 +44,7 @@
     <ClInclude Include="orea\app\sensitivityrunner.hpp" />
     <ClInclude Include="orea\app\structuredanalyticserror.hpp" />
     <ClInclude Include="orea\auto_link.hpp" />
+    <ClInclude Include="orea\cube\cubeinterpretation.hpp" />
     <ClInclude Include="orea\cube\cubewriter.hpp" />
     <ClInclude Include="orea\cube\inmemorycube.hpp" />
     <ClInclude Include="orea\cube\npvcube.hpp" />
@@ -51,6 +52,7 @@
     <ClInclude Include="orea\cube\sensicube.hpp" />
     <ClInclude Include="orea\cube\sensitivitycube.hpp" />
     <ClInclude Include="orea\engine\filteredsensitivitystream.hpp" />
+    <ClInclude Include="orea\engine\mporcalculator.hpp" />
     <ClInclude Include="orea\engine\observationmode.hpp" />
     <ClInclude Include="orea\engine\parametricvar.hpp" />
     <ClInclude Include="orea\engine\riskfilter.hpp" />
@@ -96,9 +98,11 @@
     <ClCompile Include="orea\app\reportwriter.cpp" />
     <ClCompile Include="orea\app\sensitivityrunner.cpp" />
     <ClCompile Include="orea\app\structuredanalyticserror.cpp" />
+    <ClCompile Include="orea\cube\cubeinterpretation.cpp" />
     <ClCompile Include="orea\cube\cubewriter.cpp" />
     <ClCompile Include="orea\cube\sensitivitycube.cpp" />
     <ClCompile Include="orea\engine\filteredsensitivitystream.cpp" />
+    <ClCompile Include="orea\engine\mporcalculator.cpp" />
     <ClCompile Include="orea\engine\parametricvar.cpp" />
     <ClCompile Include="orea\engine\riskfilter.cpp" />
     <ClCompile Include="orea\engine\sensitivityaggregator.cpp" />
