[Touch:1264]Prepare for removal of hard-coded DK from CAM
- Add InflationModelData so that CAM can have different models
- Update how calibration baskets are fed to model data. Will need more
  than one basket for Jarrow Yildrim.
- Generalised ModelParameter to avoid large ctors i.e. aTimes, aValues,
  hTimes, hValues, etc... Only use these in inflation model data but can
  be used in the other model data classes also.

Lots more to do but example 17, with DK model, still works at this
point.

--- a/OREData/OREData.vcxproj
+++ b/OREData/OREData.vcxproj
@@ -94,18 +94,25 @@
     <ClInclude Include="ored\marketdata\yieldcurve.hpp" />
     <ClInclude Include="ored\marketdata\inflationcapfloorvolcurve.hpp" />
     <ClInclude Include="ored\marketdata\yieldvolcurve.hpp" />
+    <ClInclude Include="ored\model\calibrationbasket.hpp" />
+    <ClInclude Include="ored\model\calibrationinstrumentfactory.hpp" />
+    <ClInclude Include="ored\model\calibrationinstruments\cpicapfloor.hpp" />
     <ClInclude Include="ored\model\crossassetmodelbuilder.hpp" />
     <ClInclude Include="ored\model\crossassetmodeldata.hpp" />
     <ClInclude Include="ored\model\eqbsbuilder.hpp" />
     <ClInclude Include="ored\model\eqbsdata.hpp" />
     <ClInclude Include="ored\model\fxbsbuilder.hpp" />
     <ClInclude Include="ored\model\fxbsdata.hpp" />
-    <ClInclude Include="ored\model\infdkbuilder.hpp" />
-    <ClInclude Include="ored\model\infdkdata.hpp" />
+    <ClInclude Include="ored\model\inflation\infdkbuilder.hpp" />
+    <ClInclude Include="ored\model\inflation\infdkdata.hpp" />
+    <ClInclude Include="ored\model\inflation\infjydata.hpp" />
+    <ClInclude Include="ored\model\inflation\inflationmodeldata.hpp" />
     <ClInclude Include="ored\model\irlgmdata.hpp" />
     <ClInclude Include="ored\model\lgmbuilder.hpp" />
     <ClInclude Include="ored\model\lgmdata.hpp" />
     <ClInclude Include="ored\model\modelbuilder.hpp" />
+    <ClInclude Include="ored\model\modeldata.hpp" />
+    <ClInclude Include="ored\model\modelparameter.hpp" />
     <ClInclude Include="ored\model\structuredmodelerror.hpp" />
     <ClInclude Include="ored\model\utilities.hpp" />
     <ClInclude Include="ored\ored.hpp" />
@@ -252,17 +259,24 @@
     <ClCompile Include="ored\marketdata\yieldcurve.cpp" />
     <ClCompile Include="ored\marketdata\inflationcapfloorvolcurve.cpp" />
     <ClCompile Include="ored\marketdata\yieldvolcurve.cpp" />
+    <ClCompile Include="ored\model\calibrationbasket.cpp" />
+    <ClCompile Include="ored\model\calibrationinstrumentfactory.cpp" />
+    <ClCompile Include="ored\model\calibrationinstruments\cpicapfloor.cpp" />
     <ClCompile Include="ored\model\crossassetmodelbuilder.cpp" />
     <ClCompile Include="ored\model\crossassetmodeldata.cpp" />
     <ClCompile Include="ored\model\eqbsbuilder.cpp" />
     <ClCompile Include="ored\model\eqbsdata.cpp" />
     <ClCompile Include="ored\model\fxbsbuilder.cpp" />
     <ClCompile Include="ored\model\fxbsdata.cpp" />
-    <ClCompile Include="ored\model\infdkbuilder.cpp" />
-    <ClCompile Include="ored\model\infdkdata.cpp" />
+    <ClCompile Include="ored\model\inflation\infdkbuilder.cpp" />
+    <ClCompile Include="ored\model\inflation\infdkdata.cpp" />
+    <ClCompile Include="ored\model\inflation\infjydata.cpp" />
+    <ClCompile Include="ored\model\inflation\inflationmodeldata.cpp" />
     <ClCompile Include="ored\model\irlgmdata.cpp" />
     <ClCompile Include="ored\model\lgmbuilder.cpp" />
     <ClCompile Include="ored\model\lgmdata.cpp" />
+    <ClCompile Include="ored\model\modeldata.cpp" />
+    <ClCompile Include="ored\model\modelparameter.cpp" />
     <ClCompile Include="ored\model\utilities.cpp" />
     <ClCompile Include="ored\portfolio\bond.cpp" />
     <ClCompile Include="ored\portfolio\bondutils.cpp" />
