--- a/OREData/OREData.vcxproj.filters
+++ b/OREData/OREData.vcxproj.filters
@@ -509,6 +509,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ored\export.cpp" />
     <ClCompile Include="ored\configuration\capfloorvolcurveconfig.cpp">
       <Filter>configuration</Filter>
     </ClCompile>
