additional results first draft

--- a/OREData/ored/CMakeLists.txt
+++ b/OREData/ored/CMakeLists.txt
@@ -64,6 +64,7 @@ model/irlgmdata.cpp
 model/lgmbuilder.cpp
 model/lgmdata.cpp
 model/utilities.cpp
+portfolio/additionalresults.cpp
 portfolio/bond.cpp
 portfolio/bondutils.cpp
 portfolio/builders/capfloor.cpp
@@ -206,6 +207,7 @@ model/marketobserver.hpp
 model/modelbuilder.hpp
 model/structuredmodelerror.hpp
 model/utilities.hpp
+portfolio/additionalresults.hpp
 portfolio/bond.hpp
 portfolio/bondutils.hpp
 portfolio/builders/bond.hpp
