--- a/Docker/docker-compose-boost-debug.yml
+++ b/Docker/docker-compose-boost-debug.yml
@@ -5,7 +5,7 @@ services:
     image: build_env_boost_debug:1.72.0
     build:
       context: .
-      dockerfile: Dockerfile-Boost
+      dockerfile: Dockerfile-Boost-Debug
       args:
         - boost_version=1.72.0
         - boost_dir=boost_1_72_0
