--- a/OREData/OREData.vcxproj.filters
+++ b/OREData/OREData.vcxproj.filters
@@ -534,6 +534,9 @@
     <ClInclude Include="ored\model\inflation\inflationmodeldata.hpp">
       <Filter>model\inflation</Filter>
     </ClInclude>
+    <ClInclude Include="ored\model\inflation\infjybuilder.hpp">
+      <Filter>model\inflation</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ored\configuration\capfloorvolcurveconfig.cpp">
@@ -942,6 +945,9 @@
       <Filter>model\inflation</Filter>
     </ClCompile>
     <ClCompile Include="ored\model\inflation\inflationmodeldata.cpp">
+      <Filter>model\inflation</Filter>
+    </ClCompile>
+    <ClCompile Include="ored\model\inflation\infjybuilder.cpp">
       <Filter>model\inflation</Filter>
     </ClCompile>
   </ItemGroup>
