--- a/OREAnalytics/orea/CMakeLists.txt
+++ b/OREAnalytics/orea/CMakeLists.txt
@@ -11,7 +11,7 @@ app/parameters.cpp
 app/reportwriter.cpp
 app/sensitivityrunner.cpp
 app/structuredanalyticserror.cpp
-app/xvrunner.cpp
+app/xvarunner.cpp
 cube/cubeinterpretation.cpp
 cube/cubewriter.cpp
 cube/sensitivitycube.cpp
@@ -61,7 +61,7 @@ app/parameters.hpp
 app/reportwriter.hpp
 app/sensitivityrunner.hpp
 app/structuredanalyticserror.hpp
-app/xvrunner.hpp
+app/xvarunner.hpp
 auto_link.hpp
 cube/cubeinterpretation.hpp
 cube/cubewriter.hpp
